--- a/madlibs.html
+++ b/madlibs.html
@@ -6,15 +6,15 @@
   </head>
   <body>
     <script>
-    var noun = "brick"; // this version includes hardcode values
-    var adjetive = "huge";
-    var adverb = "terribly";
-    var verb = "running";
+    var noun = prompt("Gimme a noun..."); // this version includes user-submotted values
+    var adjective = prompt("Gimme an adjetive...");
+    var adverb = prompt("Gimme an adverb...");
+    var verb = prompt("Gimme a verb...");
 
     console.log("On a tropical " + noun + ",");
-    console.log("Underneath a " + adjetive + " lava moon,");
+    console.log("Underneath a " + adjective + " lava moon,");
     console.log("Hangin' " + adverb + " with the hulu dancers,");
-    console.log(adjetive + " questions cause' they got all the answers");
+    console.log(verb + " questions cause' they got all the answers.");
     </script>
   </body>
 </html>
